<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/hello_first_fragment"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/textview_second"
        app:layout_constraintEnd_toStartOf="@id/user_delay_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/user_delay_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:contentDescription="@string/delay_time_between_image_changes"
        app:layout_constraintBottom_toTopOf="@id/textview_second"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_first"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/choose_background_color2"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toStartOf="@id/bg_color_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/bg_color_spinner"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:contentDescription="@string/choose_background_color"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_second"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_second" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_directory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />

</androidx.constraintlayout.widget.ConstraintLayout>